--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "frontend-code-challenge",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "classnames": "^2.3.1",
+    "history": "^5.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "reselect": "~4.0.0"
   },
   "devDependencies": {
     "node-sass": "^6.0.1"
