--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.12.3",
     "classnames": "^2.3.1",
     "history": "^5.0.1",
+    "luxon": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,7 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "node ./exercise/api.js"
   },
   "eslintConfig": {
     "extends": [
