--- a/package.json
+++ b/package.json
@@ -1,47 +1,53 @@
 {
-  "name": "frontend-code-challenge",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "classnames": "^2.3.1",
-    "history": "^5.0.1",
-    "luxon": "^2.0.2",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "reselect": "~4.0.0"
-  },
-  "devDependencies": {
-    "node-sass": "^6.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "api": "node ./exercise/api.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "frontend-code-challenge",
+    "version": "1.0.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^4.12.3",
+        "axios": "^0.21.4",
+        "classnames": "^2.3.1",
+        "history": "^5.0.1",
+        "luxon": "^2.0.2",
+        "mobx": "^6.3.3",
+        "mobx-react-lite": "^3.2.1",
+        "prop-types": "^15.7.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.4",
+        "react-router": "^5.2.0",
+        "react-scripts": "4.0.3",
+        "redux": "^4.1.1",
+        "redux-thunk": "^2.3.0",
+        "reselect": "~4.0.0"
+    },
+    "devDependencies": {
+        "@dudadev/prettier-config": "^1.0.1",
+        "node-sass": "^6.0.1",
+        "prettier": "^2.3.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "eject": "react-scripts eject",
+        "api": "node ./exercise/api.js"
+    },
+    "proxy": "http://localhost",
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
